--- a/scss/pages/_blog-template.scss
+++ b/scss/pages/_blog-template.scss
@@ -7,17 +7,17 @@
   line-height: 1.5em;
   padding-bottom: 3%;
   border-bottom: 5px solid white;
-  background: #abbaab; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to bottom,
-    #ffffff,
-    #e4e4e4
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to bottom,
-    #ffffff,
-    #e4e4e4
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  // background: #abbaab; /* fallback for old browsers */
+  // background: -webkit-linear-gradient(
+  //   to bottom,
+  //   #ffffff,
+  //   #e4e4e4
+  // ); /* Chrome 10-25, Safari 5.1-6 */
+  // background: linear-gradient(
+  //   to bottom,
+  //   #ffffff,
+  //   #e4e4e4
+  // ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   //   background: url("https://res.cloudinary.com/mtreeves24/image/upload/q_60/v1601992915/Exotic%20Explorers/triangles/triangles-grey-wide.svg")
   //     no-repeat;
   //   background-size: cover;
@@ -82,8 +82,8 @@ blockquote {
   width: 70%;
   margin: 30px auto;
   font-style: italic;
-  color: #555555;
-  padding: 1em 10px 1em 75px;
+  color: #333;
+  padding: 1em 25px 1em 55px;
   border-left: 8px solid #006e4a;
   line-height: 1.6;
   position: relative;
